# pluginlib

./: .gitignore  .hgignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  pluginlib-extras.cmake  rosdep.yaml  setup.py  stack.xml
cmake/: hide_plugin_symbols.cmake  pluginlib_package_hook.cmake
include/pluginlib/: class_desc.h  class_desc.hpp  class_list_macros.h  class_list_macros.hpp  class_loader.h  class_loader.hpp  class_loader_base.h  class_loader_base.hpp  class_loader_imp.h  class_loader_imp.hpp  exceptions.hpp  pluginlib_exceptions.h  typed_class_loader_template.template
include/pluginlib/impl/: filesystem_helper.hpp  split.hpp
pluginlib/: CHANGELOG.rst  CMakeLists.txt  package.xml  pluginlib-extras.cmake
pluginlib/.travis/: wait_for_apt.sh
pluginlib/cmake/: blank.in  pluginlib_enable_plugin_testing.cmake  pluginlib_export_plugin_description_file.cmake  pluginlib_package_hook.cmake
pluginlib/include/pluginlib/: class_desc.h  class_desc.hpp  class_list_macros.h  class_list_macros.hpp  class_loader.h  class_loader.hpp  class_loader_base.h  class_loader_base.hpp  class_loader_imp.h  class_loader_imp.hpp  exceptions.hpp  pluginlib_exceptions.h
pluginlib/include/pluginlib/impl/: filesystem_helper.hpp  split.hpp
pluginlib/scripts/: pluginlib_headers_migration.py
pluginlib/test/: package.xml  test_package.xml  test_plugins.cpp  test_plugins.h  test_plugins.xml  unique_ptr_test.cpp  utest.cpp
pluginlib/test/include/: test_base.h  test_base.hpp  test_plugins.h  test_plugins.hpp  visibility_control.hpp
ros2plugin/ros2plugin/api/: __init__.py
ros2plugin/ros2plugin/verb/: list.py
scripts/: plugin_macro_update
share/pluginlib/: typed_class_loader_template.cpp
src/: boost_fs_wrapper.cpp  plugin_tool.cpp  typed_class_loader_template.template
test/: issue1.cpp  issue2.cpp  test_base.h  test_plugins.cpp  test_plugins.h  unique_ptr_test.cpp  utest.cpp
test_pluginlib/: CHANGELOG.rst  CMakeLists.txt  package.xml
test_pluginlib/test/: unique_ptr_test.cpp  utest.cpp
test_pluginlib_fixture/: CHANGELOG.rst  CMakeLists.txt  package.xml  test_plugins.xml
test_pluginlib_fixture/include/test_pluginlib_fixture/: test_base.h
test_pluginlib_fixture/src/: test_plugins.cpp  test_plugins.h
test_pluginlib_fixture/test/: test_plugins.h
