<package>
  <name>pluginlib</name>
  <version>1.9.2</version>
  <description>
    The pluginlib package provides tools for writing and dynamically loading plugins using the ROS build infrastructure.
    To work, these tools require plugin providers to register their plugins in the package.xml of their package.
  </description>
  <maintainer email="mshah@willowgarage.com">Mirza Shah</maintainer>
  <license>BSD</license>
  <license>Boost Software License</license>

  <url>http://www.ros.org/wiki/pluginlib</url>
  <author>Eitan Marder-Eppstein</author>
  <author>Tully Foote</author>
  <author>Dirk Thomas</author>
  <author>Mirza Shah</author>

  <build_depend>boost</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tinyxml</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>class_loader</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tinyxml</run_depend>

  <export>
    <pluginlib plugin="${prefix}/test/test_plugins.xml"/>
  </export>
</package>
