<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>pluginlib</name>
  <version>1.13.0</version>
  <description>
    The pluginlib package provides tools for writing and dynamically loading plugins using the ROS build infrastructure.
    To work, these tools require plugin providers to register their plugins in the package.xml of their package.
  </description>
  <maintainer email="stevenragnarok@osrfoundation.org">Steven! Ragnarök</maintainer>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/pluginlib</url>
  <url type="bugtracker">https://github.com/ros/pluginlib/issues</url>
  <url type="repository">https://github.com/ros/pluginlib</url>
  <author>Eitan Marder-Eppstein</author>
  <author>Tully Foote</author>
  <author>Dirk Thomas</author>
  <author>Mirza Shah</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>libboost-dev</build_depend>
  <build_depend>libboost-filesystem-dev</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend version_gte="1.11.1">roslib</build_depend>
  <build_depend>tinyxml2</build_depend>

  <build_export_depend>libboost-dev</build_export_depend>
  <build_export_depend>libboost-filesystem-dev</build_export_depend>
  <build_export_depend>class_loader</build_export_depend>
  <build_export_depend>rosconsole</build_export_depend>
  <build_export_depend version_gte="1.11.1">roslib</build_export_depend>
  <build_export_depend>tinyxml2</build_export_depend>

  <export>
    <pluginlib plugin="${prefix}/test/test_plugins.xml"/>
    <pluginlib plugin_test="${prefix}/test/test_plugins_broken.xml"/>
  </export>
</package>
